Optuna/ZeroK-Tuner/kube/tester/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tester

---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tester
  name: tester-deployment
  labels:
    app: load-generator
    dep: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
      dep: default
  template:
    metadata:
      labels:
        app: load-generator
        dep: default
    spec:
      tolerations:
      - key: "dedicated"
        operator: "Equal"
        value: "k6"
        effect: "NoSchedule"
      containers:
        - name: k6-load-generator
          image: tester
          imagePullPolicy: Never
          ports:
          - name: m-http
            containerPort: 3000
          resources: 
            requests: 
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 300m
              memory: 500Mi 

---

apiVersion: v1
kind: Service
metadata:
  namespace: tester
  name: tester-service
  labels:
    app: load-generator
spec:
  selector:
    app: load-generator
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      name: m-http  
      port: 80
      targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: tester
  name: tester-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: tester.local
    http:
      paths:
      - backend:
          service:
            name: tester-service
            port: 
              number: 80
        path: /
        pathType: Prefix
